--- a/store.html
+++ b/store.html
@@ -65,11 +65,12 @@
         .container { width: 95%; margin: 30px auto; }
         .grid-title { text-align: center; margin-bottom: 30px; letter-spacing: 5px; text-transform: uppercase; font-size: 20px; border-bottom: 1px solid #222; padding-bottom: 10px; }
 
-        /* --- මම වෙනස් කළ කොටස (Grid & Flex Layout) --- */
+        /* --- Grid Layout එක මෙතනින් වෙනස් කළා --- */
         .game-grid {
             display: flex;
             flex-wrap: wrap;
-            gap: 20px;
+            gap: 15px; /* කාඩ් අතර පරතරය */
+            justify-content: center;
         }
 
         .game-item {
@@ -79,10 +80,10 @@
             overflow: hidden;
             transition: 0.3s;
             text-align: center;
-            /* හැම බොක්ස් එකක්ම එකම උසට ගැනීමට Flex පාවිච්චි කරනවා */
             display: flex;
             flex-direction: column;
-            width: calc(25% - 15px); /* පේළියට 4 බැගින් */
+            /* ලැප් එකේදී පේළියකට 4 ක් (Desktop) */
+            width: calc(25% - 12px); 
         }
 
         .game-item:hover { border-color: #fff; transform: translateY(-5px); }
@@ -95,23 +96,23 @@
         }
 
         .game-info {
-            padding: 15px;
+            padding: 12px;
             display: flex;
             flex-direction: column;
-            gap: 8px;
-            flex-grow: 1; /* ඉඩ ප්‍රමාණය සමානව බෙදා ගැනීමට */
+            gap: 5px;
+            flex-grow: 1;
         }
 
         .game-item h3 {
-            font-size: 15px;
+            font-size: 14px;
             font-weight: bold;
             text-transform: capitalize;
             color: #fff;
-            min-height: 40px; /* නම දිග වුණත් කොට වුණත් එකම මට්ටමක තැබීමට */
+            min-height: 38px;
         }
 
         .meta-text {
-            font-size: 12px;
+            font-size: 11px;
             color: #888;
         }
 
@@ -121,34 +122,45 @@
             justify-content: center;
             gap: 5px;
             color: #fff;
-            font-size: 12px;
-            margin-top: auto; /* රේටින්ග් එක පල්ලෙහාට තල්ලු කරයි */
+            font-size: 11px;
+            margin-top: auto;
         }
 
-        .stars-gold { color: #fff; font-size: 14px; }
+        .stars-gold { color: #fff; font-size: 12px; }
 
         .mini-download-btn {
-            margin-top: 10px; /* බටන් එක හැමවිටම පතුලේ රඳවයි */
+            margin-top: 10px;
             display: block;
-            padding: 10px;
+            padding: 8px;
             border: 1px solid #fff;
             color: #fff;
             text-decoration: none;
-            font-size: 11px;
+            font-size: 10px;
             font-weight: bold;
             text-transform: uppercase;
             letter-spacing: 1px;
         }
-        /* --- වෙනස් කළ කොටස අවසන් --- */
 
         .mini-download-btn:hover { background: #fff; color: #000; }
 
-        /* Responsive */
-        @media (max-width: 1024px) { .game-item { width: calc(33.33% - 14px); } }
-        @media (max-width: 768px) { .game-item { width: calc(50% - 10px); } }
+        /* --- Responsive Settings (මෙතනින් තමයි පේළි ගණන තීරණය වෙන්නේ) --- */
+        
+        /* ටැබ්ලට් සඳහා (පේළියට 3 ක්) */
+        @media (max-width: 1024px) { 
+            .game-item { width: calc(33.33% - 10px); } 
+        }
+
+        /* ෆෝන් සඳහා (පේළියට 2 ක්) */
+        @media (max-width: 768px) { 
+            .game-item { width: calc(50% - 10px); } 
+            .game-item img { height: 160px; } /* ෆෝන් එකට ගැලපෙන උස */
+        }
+
+        /* ඉතා කුඩා ෆෝන් සඳහා (පේළියට 2 ක් ම තියාගමු, ලස්සනයි) */
         @media (max-width: 480px) { 
-            .game-item { width: 100%; } 
-            .game-item img { height: 180px; }
+            .game-item { width: calc(50% - 8px); }
+            .game-item h3 { font-size: 12px; }
+            .mini-download-btn { font-size: 9px; }
         }
 
         footer { text-align: center; padding: 20px; border-top: 1px solid #222; margin-top: 30px; color: #555; font-size: 12px; }
