--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
 
     <nav>
         <ul class="nav-links">
-            <li><a href="https://fitgirl-repacks.site/" target="_blank">Games 🎮</a></li>
+            <li><a href="store.html" target="_blank">Games 🎮</a></li>
             <li><a href="https://cinesubz.lk/" target="_blank">Movies🎬</a></li>
             <li><a href="https://cinesubz.lk/tvshows/" target="_blank">TV Series 📺</a></li>
             <li><a href="https://wa.me/94777042735" target="_blank">Contact📬</a></li>
@@ -456,7 +456,7 @@
     </div>
 
     <div class="hero-banner">
-        <h1>Welcome to Black Store. <br> <span id="typed-text"></span></h1>
+        <h1>Welcome to Black Store.LK <br> <span id="typed-text"></span></h1>
     </div>
 
     <div class="container">
@@ -677,3 +677,4 @@
 
 </body>
 </html>
+
