--- a/index.html
+++ b/index.html
@@ -49,31 +49,41 @@
             gap: 15px;
         }
 
-        /* --- PREMIUN ANIMATED CODE LOGO (NO IMAGE) --- */
+        /* --- UNIQUE SUPREME SMOOTH LOGO (NO IMAGE) --- */
         .logo-box {
             width: 60px;
             height: 60px;
-            border: 2px solid #fff;
+            border: 1px solid rgba(255,255,255,0.8);
             display: flex;
             justify-content: center;
             align-items: center;
             background: #000;
             position: relative;
-            overflow: hidden;
-            box-shadow: 0 0 10px rgba(255,255,255,0.1);
+            border-radius: 4px 15px 4px 15px; /* Unique Symmetric Shape */
+            transition: 0.5s;
+        }
+
+        .logo-box::before {
+            content: '';
+            position: absolute;
+            width: 80%;
+            height: 80%;
+            border: 0.5px solid rgba(255,255,255,0.2);
+            border-radius: inherit;
         }
 
         .logo-box::after {
             content: 'LANX';
             color: #fff;
-            font-weight: 900;
-            font-size: 16px;
-            animation: logoPulse 2s infinite ease-in-out;
+            font-weight: 200; /* Ultra Thin Posh Look */
+            font-size: 11px;
+            letter-spacing: 4px;
+            animation: supremeGlow 4s infinite ease-in-out;
         }
 
-        @keyframes logoPulse {
-            0%, 100% { text-shadow: 0 0 2px #fff; opacity: 1; }
-            50% { text-shadow: 0 0 15px #fff, 0 0 30px #fff; opacity: 0.8; }
+        @keyframes supremeGlow {
+            0%, 100% { opacity: 0.4; letter-spacing: 4px; }
+            50% { opacity: 1; letter-spacing: 6px; text-shadow: 0 0 10px #fff; }
         }
 
         .brand-name {
@@ -154,7 +164,7 @@
             header { padding: 15px 3%; }
             .brand-name { font-size: 16px; letter-spacing: 1px; }
             .logo-box { width: 45px; height: 45px; }
-            .logo-box::after { font-size: 12px; }
+            .logo-box::after { font-size: 8px; letter-spacing: 2px; }
             .user-nav-area span { font-size: 9px; }
         }
 
